# ai-development-playbook

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AWESOME.md  BADGES.md  LEADERBOARD.md  LICENSE  MATURITY_EVALUATION.md  README.md  ROADMAP.md  STARTER_KITS.md  action.yml  podcast.xml
.github/DISCUSSION_TEMPLATE/: show_and_tell.yml
.github/ISSUE_TEMPLATE/: good_first_issue.yml
.github/workflows/: branching-strategy-enforcement.yml  deploy-mindmap.yml  gamification-leaderboard.yml  playbook-copilot.yml  playbook-linter.yml  podcast-generator.yml
case-studies/: finance-pci-dss-fraud-detection-case-study.md  government-fedramp-ai-deployment-case-study.md  healthcare-hipaa-rag-case-study.md
docs/: CONTRIBUTING.md  finops.md  graph.json  index.html  ontology-integration.md  ontology_schema.owl
docs/00-onboarding/: developer_onboarding_guide.md  gamification.md  podcast-subscription.md
docs/01-discovery/: ai_cost_modeling.md  slm_vs_llm_decision_framework.md
docs/04-development/: api_standards.md  (+9 more)
quickstart/: BRANCHING_WORKFLOW_EXAMPLES.md  GIT_HOOKS_CI_CD_SETUP.md  gitlab-ci-pipeline.yml  rag-hygiene-dashboard.json
quickstart/slm-eval-template/: README.md  promptfooconfig.yaml  pyproject.toml  requirements.txt
quickstart/slm-eval-template/src/: eval.py
scripts/: check_feature_flags.py  finops_cost_estimator.py  generate_graph_data.py  generate_podcast_episode.py  playbook_copilot.py  playbook_linter.py  sample_fastapi_endpoint.py  sample_github_actions.yml  sample_langchain_rag.py  update_leaderboard.py  update_rss_feed.py  validate_branch_name.py
(+97 files in other folders)
